// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be rendered correctly 1`] = `
<label
  className="container uui-checkbox-container root size-18 mode-form -clickable"
  tabIndex={-1}
>
  <div
    className="uui-checkbox uui-checked"
  >
    <input
      aria-checked={true}
      checked={true}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</label>
`;

exports[`Checkbox should be rendered correctly with new props 1`] = `
<label
  className="container uui-checkbox-container root size-12 mode-form theme-dark -clickable"
  tabIndex={-1}
>
  <div
    className="uui-checkbox uui-checked"
  >
    <input
      aria-checked={true}
      checked={true}
      onChange={[Function]}
      tabIndex={0}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</label>
`;
